syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package deliverystatuspb;

service DeliveryStatusAPI {
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Set(SetRequest) returns (SetResponse) {}
    rpc Update(UpdateRequest) returns (google.protobuf.Empty) {}
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {}
}

message DeliveryStatus {
	string orderUUID = 1;
	string userUUID = 2;
	int32 status = 3;
	string inquiryNumber = 4;
	google.protobuf.Timestamp createdAt = 5;
	google.protobuf.Timestamp updatedAt = 6;
	google.protobuf.Timestamp deletedAt = 7;
}

message GetRequest {
    string orderUUID = 1;
}

message GetResponse {
    DeliveryStatus deliveryStatus = 1;
}

message SetRequest {
	DeliveryStatus deliveryStatus = 1;
}

message SetResponse {
	string orderUUID = 1;
}

message UpdateRequest {
	DeliveryStatus deliveryStatus = 1;
}

message DeleteRequest {
    string orderUUID = 1;
}
